# rquest-middleware

./: README.md
reqwest-middleware/: Cargo.toml
reqwest-middleware/src/: client.rs  error.rs  lib.rs  middleware.rs  req_init.rs
reqwest-retry/: Cargo.toml
reqwest-retry/src/: lib.rs  middleware.rs  retryable.rs  retryable_strategy.rs
reqwest-retry/tests/all/: retry.rs
reqwest-tracing/: Cargo.toml  README.md
reqwest-tracing/src/: lib.rs  middleware.rs  otel.rs  reqwest_otel_span_builder.rs  reqwest_otel_span_macro.rs
