[package]
name = "reqwest-middleware"
version = "0.4.0"
authors = ["Rodrigo Gryzinski <rodrigo.gryzinski@truelayer.com>"]
edition = "2018"
description = "Wrapper around reqwest to allow for client middleware chains."
repository = "https://github.com/TrueLayer/reqwest-middleware"
license = "MIT OR Apache-2.0"
keywords = ["reqwest", "http", "middleware"]
categories = ["web-programming::http-client"]
readme = "../README.md"

[features]
multipart = ["wreq/multipart"]
json = ["wreq/json"]
charset = ["wreq/charset"]

[dependencies]
anyhow = "1.0.0"
async-trait = "0.1.88"
http = "1.0.0"
wreq = { version = "6.0.0-rc.8", default-features = false }
serde = "1.0.106"
thiserror = "1.0.21"
tower-service = "0.3.0"

[dev-dependencies]
wreq = { version = "5" }
reqwest-retry = { path = "../reqwest-retry" }
reqwest-tracing = { path = "../reqwest-tracing" }
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.0"
